# cystene

./: CLAUDE.md  README.md
.examples/infosec-research/: commands.txt
.examples/infosec-research/lessons/: lesson_10_macos_security.md  lesson_11_cloud_security.md  lesson_12_social_engineering_attacks.md  lesson_13_red_team_operations.md  lesson_14_binary_exploitation.md  lesson_15_threat_intelligence.md  lesson_16_secure_development.md  lesson_17_api_attacks.md  lesson_1_intelligence_gathering.md  lesson_2_exploitation.md  lesson_3_physical_access.md  lesson_4_post_exploitation.md  lesson_5_network_infrastructure_attacks.md  lesson_6_password_attacks.md  lesson_7_wireless_security.md  lesson_8_mobile_device_attacks.md  lesson_9_active_directory_attacks.md
.examples/infosec-research/notes/: course_plan.md  cybersec_learning_plan.md  cybersecurity_attack_taxonomy.md
.examples/infosec-research/notes/basics/: common_vulnerabilities.md  cryptography_basics.md  networking_basics.md  web_technologies.md
.examples/infosec-research/scripts/: README.md
.examples/infosec-research/scripts/common/: reverse_shell_gen.sh
.examples/infosec-research/scripts/lesson_01_recon/: dir_buster.sh  port_scanner.py
.examples/infosec-research/scripts/lesson_02_web_exploitation/: cmd_injector.py  sql_injector.py
.examples/infosec-research/scripts/lesson_03_physical_access/: phishing_server.py  (+1 more)
client/: .env.example  package-lock.json  package.json
client/src/: proxy.ts
client/src/app/: layout.tsx
server/: .env.example  build.sh  main.py  manage.py  nixpacks.toml  pyproject.toml  requirements.txt
server/apps/assetmanager/: router.py
server/apps/cybersecurity/: router.py
server/apps/cybersecurity/engine/: Cargo.toml  pyproject.toml
server/apps/cybersecurity/engine/src/: lib.rs
server/apps/cybersecurity/engine/src/scanners/: mod.rs
server/apps/cybersecurity/engine/src/scanners/crypto/: hash_crack.rs  mod.rs
server/apps/cybersecurity/engine/src/scanners/utils/: banner_match.rs  mod.rs
server/core/: config.py
server/migrations/: env.py
server/migrations/versions/: 2026_04_06_1359-bc7a06ee7c35_intitial_accounts_migrations.py  2026_04_07_0045-5df0fe077132_add_cybersecurity_models.py  2026_06_21_0144-64cfb7d9d667_add_feedback_table.py  2026_06_21_1143-a032b2c1400a_rename_feedback_indexes_with_table_.py
support/: commands.txt
support/cystene/: claude-code-handover.md  domain-architecture.md  lessons-coverage-map.md  market-vibe-scanners.md
support/docker/: docker-compose-scanner-targets.yml
support/guidelines/arhitecture/: type-of-files.md
support/prompts/: adversarial-self-review-prompt.md  ai-reviewer-prompt.md  coding-prompt.md  review-prompt.md
support/random/: mcp-codex-setup.md  package-by-feature-vs-layer.md  plugins-and-mcps-reference.md  portfolio-projects-paths.md  portfolio-ranking-and-focus.md  product-launch-platforms.md  soc2-hipaa-cheatsheet.md  stripe-setup-products.md
support/tasks/: ai-discoverability.md
support/to-do/: 0_order.md  temp_prompt.txt
website/: package-lock.json  package.json
website/public/: llms.txt
website/src/app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
(+390 files in other folders)
